gitlab-cicd-demo/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab-demo
  labels:
    app.kubernetes.io/name: gitlab-demo
