gitlab-cicd-demo/manifests/06-gitlab-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-runner
  namespace: gitlab-demo
  labels:
    app.kubernetes.io/name: gitlab-runner
    app.kubernetes.io/part-of: gitlab-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gitlab-runner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitlab-runner
        app.kubernetes.io/part-of: gitlab-demo
    spec:
      nodeName: worker-1
      containers:
        - name: gitlab-runner
          image: gitlab/gitlab-runner:alpine-v17.10.1
          imagePullPolicy: IfNotPresent
          command:
            - /bin/bash
            - -lc
            - |
              gitlab-runner run --working-directory=/home/gitlab-runner --user=gitlab-runner
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          volumeMounts:
            - name: runner-config
              mountPath: /etc/gitlab-runner
      volumes:
        - name: runner-config
          emptyDir: {}
