gitlab-cicd-demo/manifests/04-gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab-demo
  labels:
    app.kubernetes.io/name: gitlab
    app.kubernetes.io/part-of: gitlab-demo
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: gitlab
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
    - name: ssh
      port: 22
      targetPort: ssh
      nodePort: 30022
