gitlab-cicd-demo/manifests/09-gitlab-frontend-path-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-gitlab-path-route
  namespace: hse-llm-project
spec:
  parentRefs:
    - name: web-gateway
      namespace: hse-llm-project
      sectionName: http
    - name: web-gateway
      namespace: hse-llm-project
      sectionName: http-public
  hostnames:
    - frontend.hse-llm.internal
    - frontend.hse-llm-project-2026.ru
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /gitlab
      backendRefs:
        - name: gitlab
          namespace: gitlab-demo
          port: 80
